# opennotenetwork

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  LICENSE  README.md
.github/workflows/: scheduled-ingestion.yml
api/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  deploy-secrets.sh  fly.toml  main.py  pyproject.toml  requirements.txt  run.py
api/app/: auth.py  config.py  database.py  models.py
api/app/classifiers/: __init__.py  base.py  climate_misinformation_v1.py  full_fact_v1.py  registry.py  topic_tagger_v1.py
api/app/classifiers/clarity_v1/: __init__.py  classifier.py
api/app/classifiers/climate_misinformation_v1/: __init__.py  classifier.py
api/app/classifiers/domain_classifier_v1/: __init__.py  classifier.py
api/app/classifiers/full_fact_v1/: __init__.py  classifier.py
api/app/classifiers/media_type_v1/: __init__.py  classifier.py
api/app/classifiers/partisan_tilt_classifier_v1/: __init__.py  classifier.py
api/app/classifiers/science_domain_v1/: __init__.py  classifier.py
api/app/classifiers/shared/: __init__.py  tweet_utils.py
api/app/classifiers/topic_tagger_v1/: __init__.py  classifier.py
api/app/classifiers/tweet_type_v1/: __init__.py  classifier.py
api/app/fact_checkers/: __init__.py  base.py  registry.py
api/app/fact_checkers/general_checker/: __init__.py  fact_checker.py
api/app/fact_checkers/gpt5_v1/: __init__.py  fact_checker.py
api/app/fact_checkers/science_checker/: __init__.py  fact_checker.py
api/app/fact_checkers/shared/: enums.py  tweet_utils.py
api/app/note_writers/: __init__.py  base.py  registry.py  x_note_writer_v1.py
api/app/routers/: admin.py  public.py  resources.py
api/app/schemas/: admin.py  public.py
api/app/services/: classification.py  classification_jobs.py  classifier.py  evaluation.py  fact_check_automation.py  fact_checking.py  filter_builder.py  ingestion.py  note_writing.py  notegen.py  posts.py  submission.py  validation.py  x_api_client.py
api/app/services/utils/: oauth1.py  url_agent.py  url_utils.py
docs/: PRD_20250827.md  TDS_20250827.md  x_community_note_api_quickstart.md  x_example_posts_eligible_for_notes.json
docs/classifiers/full_fact/: details.md
docs/writeup/: final_writeup.md
notebooks/: analysis.ipynb  half-life-twitter.csv
web/: .env.example  .eslintrc.js  CLAUDE.md  CLERK_SETUP.md  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  vercel.json
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: api-status.tsx  claims-table.tsx  classification-admin.tsx  classification-chip-row.tsx  classification-chips.tsx  classification-display.tsx  community-note.tsx  fact-check-display-public.tsx  fact-check-display.tsx  fact-check-manager.tsx  fact-check-stream.tsx  fact-check-viewer.tsx  fact-checker-chips.tsx  fact-checker-selector.tsx  note-edit-modal.tsx  note-manager.tsx  note-viewer.tsx  post-classifications.tsx  post-details.tsx  post-widget.tsx  providers.tsx  raw-json-viewer.tsx  site-header.tsx  tracked-link.tsx  twitter-embed.tsx
web/src/hooks/: use-analytics.ts  (+3 more)
(+40 files in other folders)
